added map funtionality

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
    <application
         android:label="mapapp_nitk_woc"
         android:icon="@mipmap/ic_launcher">
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyCwhrIfhaeolaODr3swxCStxleeleIF8zw"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
